JvmtiExport::post_exception_throw() doesn't deal well with concurrent stack processing

XMLWordPrintable

    • gc
    • b26

      closed test: applications/runthese/RunThese8H.java

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S95035/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4d5ff98e-fdf0-4290-81ef-a13bbd7f659e/runs/d57b2447-1135-45b7-b94f-9a9db6678149/workspace/open/src/hotspot/share/runtime/stackWatermark.cpp:179), pid=3467366, tid=3543065
      # assert(is_frame_safe(f)) failed: Frame must be safe
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0+18) (fastdebug build 20-ea+18-1259)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+18-1259, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x18e25f4] StackWatermark::assert_is_frame_safe(frame const&)+0x74
      #

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S95035/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4d5ff98e-fdf0-4290-81ef-a13bbd7f659e/runs/d57b2447-1135-45b7-b94f-9a9db6678149/workspace/open/src/hotspot/share/runtime/stackWatermark.cpp:179), pid=3467366, tid=3543065
      # assert(is_frame_safe(f)) failed: Frame must be safe
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0+18) (fastdebug build 20-ea+18-1259)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+18-1259, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x18e25f4] StackWatermark::assert_is_frame_safe(frame const&)+0x74
      #

      Looks like it crashed when trying to process an exception.

            Assignee:
            Erik Ă–sterlund
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: