8294924: JvmtiExport::post_exception_throw() doesn't deal well with concurrent stack processing